# plato

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  test.cpp  test.h  test.ui
include/: args.h  global.h
src/: dock.cpp  dock.h  dock.ui  image_processing.cpp  image_processing.h  image_processing.ui
test/: CMakeLists.txt  main.cpp
test/widget/: my_first_widget.cpp
